--- a/app/src/main/res/layout/water_card.xml
+++ b/app/src/main/res/layout/water_card.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
+                android:id="@+id/waterLeftidddd"
                 android:text="5 out 8 cups"
                 android:textColor="#000000"
                 android:textSize="18sp"
