--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -74,9 +74,12 @@
             android:gravity="center_horizontal"
             android:spacing="12dp">
 
-            <include layout="@layout/calorie_card" />
-            <include layout="@layout/water_card" />
-            <include layout="@layout/nutrient_card" />
+            <include layout="@layout/calorie_card"
+                android:id="@+id/calorieCard"/>
+            <include layout="@layout/water_card"
+                android:id="@+id/waterCard"/>
+            <include layout="@layout/nutrient_card"
+                android:id="@+id/nutrientCard"/>
 
             <Button
                 android:id="@+id/btnLogFood"
