--- a/app/src/main/res/layout/nutrient_card.xml
+++ b/app/src/main/res/layout/nutrient_card.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
+                android:id="@+id/nutrientinfoidddd"
                 android:text="Good Protien, Carb-Fat Ratio"
                 android:textColor="#000000"
                 android:textSize="18sp"
