--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -100,7 +100,6 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-
                 android:elevation="4dp"
                 android:backgroundTint="#E9FBE7"
                 app:cardCornerRadius="16dp">
@@ -121,7 +120,7 @@
                         android:textColor="#1F462B" />
 
                     <TextView
-                        android:id="@+id/tvMealName1"
+                        android:id="@+id/randomMealTitleIDDDD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="🥣 Protein-Powered Oats"
@@ -131,7 +130,7 @@
                         android:textColor="#000000" />
 
                     <TextView
-                        android:id="@+id/tvMealInfo1"
+                        android:id="@+id/healthScoreIDDDDD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Perfect for Breakfast • 320 kcal • High Protein"
@@ -140,7 +139,7 @@
                         android:textColor="#444444" />
 
                     <Button
-                        android:id="@+id/btnGenerateMeal1"
+                        android:id="@+id/btnRandomMeal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="🔄 Generate Another"
