--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -92,6 +92,7 @@
 
     <HorizontalScrollView
         android:layout_width="0dp"
+        android:id="@+id/scrollitemIDDDDD"
         android:layout_height="wrap_content"
         android:fillViewport="true"
         android:scrollbars="none"
@@ -120,6 +121,8 @@
             <include layout="@layout/snacks_card" />
         </LinearLayout>
     </HorizontalScrollView>
+
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
