--- a/app/src/main/res/layout/breakfast_card.xml
+++ b/app/src/main/res/layout/breakfast_card.xml
@@ -20,8 +20,8 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/calories"
-            android:contentDescription="Calorie Icon"
+            android:src="@drawable/breakfast"
+
             android:layout_marginEnd="12dp" />
         
         <LinearLayout
@@ -31,15 +31,15 @@
             android:layout_marginLeft="15dp">
             
             <TextView
-                android:text="Today's Calories"
+                android:text="Breakfast"
                 android:textColor="#333333"
                 android:textSize="16sp"
                 android:textStyle="normal"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
-                android:id="@+id/calorieLeftidddd"
-                android:text="1,200 kcal left"
+                android:id="@+id/breakfastTitleIDDDDDD"
+                android:text="Click the button below to generate"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
