--- a/app/src/main/res/layout/lunch_card.xml
+++ b/app/src/main/res/layout/lunch_card.xml
@@ -6,7 +6,7 @@
     app:cardCornerRadius="16dp"
     android:layout_margin="10dp"
     android:elevation="4dp"
-    android:backgroundTint="#FFE2D1"
+    android:backgroundTint="#FFF4CE"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -20,8 +20,7 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/salad"
-            android:contentDescription="Calorie Icon"
+            android:src="@drawable/lunch"
             android:layout_marginEnd="12dp" />
 
         <LinearLayout
@@ -31,15 +30,15 @@
             android:layout_marginLeft="15dp">
 
             <TextView
-                android:text="Nutrient Balance"
+                android:text="Lunch"
                 android:textColor="#333333"
                 android:textSize="16sp"
                 android:textStyle="normal"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
-                android:id="@+id/nutrientinfoidddd"
-                android:text="Good Protien, Carb-Fat Ratio"
+                android:id="@+id/LunchTitleIDDDDD"
+                android:text="Click the button below to generate"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
